--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+    "babel-polyfill": "^6.0.16"
+  },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
@@ -20,8 +23,5 @@
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.4",
     "xml-loader": "^1.2.1"
-  },
-  "dependencies": {
-    "lodash": "^4.17.10"
   }
 }
