Make webpack 1 local dependency

--- a/webpack-1-demo/package.json
+++ b/webpack-1-demo/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
+    "node-libs-browser": "^0.6.0",
     "webpack": "^1.10.1"
   },
   "scripts": {
