--- a/webpack-cjs-demo/package.json
+++ b/webpack-cjs-demo/package.json
@@ -8,9 +8,13 @@
   "license": "ISC",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack", 
+    "transpile": "babel dist --out-dir transpiled"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
+    "babel-preset-env": "^1.7.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.4"
   }
