--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -8,26 +8,14 @@
   "license": "ISC",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
-  },
-  "dependencies": {
-    "babel-polyfill": "^6.0.16"
+    "build": "webpack",
+    "transpile": "babel dist --out-dir transpiled"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
+    "babel-cli": "^6.26.0",
     "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
-    "babel-plugin-transform-es3-property-literals": "^6.22.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-es3": "^1.0.1",
-    "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^0.28.11",
-    "csv-loader": "^2.1.1",
-    "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^0.21.0",
     "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.4",
-    "xml-loader": "^1.2.1"
+    "webpack-cli": "^3.0.4"
   }
 }
